Added DASHBOARD_ADMINISTRATIVO.md